@@ -3,6 +3,8 @@ Version 0.143:
 libdw: Various convenience functions for individual attributes now use
        dwarf_attr_integrate to look up indirect inherited attributes.
 
+libdwfl: Support Linux bzip2 kernel images for automatic decompression.
+
 Version 0.142:
 
 libelf: Add elf_getshdrnum alias for elf_getshnum and elf_getshdrstrndx alias
